haciendo grid la seccion 4

--- a/index.html
+++ b/index.html
@@ -57,18 +57,17 @@
                 incidunt amet maiores non dolor earum vel. Ab suscipit dicta quam rerum possimus vitae quia?</p>
             <button class="button">Get Stared -></button>
         </section>
-        <section class="seccion3">
+        <section class="seccion3 paralax-background">
             <h1>Razones para <span> Conocerme </span></h1>
-            <img src="pic2.jpg" alt="pic2" width="40%" height="40%">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis aut nobis, sunt sint quisquam aperiam
                 incidunt amet maiores non dolor earum vel. Ab suscipit dicta quam rerum possimus vitae quia?</p>
             <button class="button">Get Stared -></button>
         </section>
         <section class="seccion4">
-                <img src="pic4.jpg" alt="pic4">
-                <img src="pic4.jpg" alt="pic4">
-                <img src="pic4.jpg" alt="pic4">
-                <img src="pic4.jpg" alt="pic4">
+                <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
+                <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
+                <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
+                <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
         </section>
         <section class="seccion5">
 
