--- a/index.html
+++ b/index.html
@@ -51,11 +51,16 @@
             <button class="button">Get Stared -></button>
         </section>
         <section class="seccion2">
-            <h1>Razones para <span> Conocerme </span></h1>
-            <img src="pic1.jpg" alt="pic1" width="40%" height="40%">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis aut nobis, sunt sint quisquam aperiam
-                incidunt amet maiores non dolor earum vel. Ab suscipit dicta quam rerum possimus vitae quia?</p>
-            <button class="button">Get Stared -></button>
+            <div class="media">
+                <img src="pic1.jpg" alt="pic1" width="500px" height="400px">
+            </div>
+            <div class="body">
+                <h1>Razones para <span> Conocerme </span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis aut nobis, sunt sint quisquam
+                    aperiam
+                    incidunt amet maiores non dolor earum vel. Ab suscipit dicta quam rerum possimus vitae quia?</p>
+                <button class="button">Get Stared -></button>
+            </div>
         </section>
         <section class="seccion3 paralax-background">
             <h1>Razones para <span> Conocerme </span></h1>
@@ -64,10 +69,10 @@
             <button class="button">Get Stared -></button>
         </section>
         <section class="seccion4">
-                <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
-                <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
-                <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
-                <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
+            <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
+            <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
+            <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
+            <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
         </section>
         <section class="seccion5">
 
