--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
             <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
         </section>
         <section class="seccion5">
-
+            <h1>Send Us Message</h1>
+            <p>Most people who work in an office environment, buy computer products.</p>
+            <input type="text" name="name" id="name" required placeholder="Enter your name">
+            <input type="email" name="email" id="email" required placeholder="Enter email address"><br>
+            <textarea name="wish" id="wish" cols="30" rows="10" placeholder="Messege"></textarea><br>
+            <button class="button">Send Message -></button>
         </section>
         <section class="seccion6">
 
