--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
             <button class="button">Send Message -></button>
         </section>
         <section class="seccion6">
-
+            <h1>Subscribe for our Newsletter</h1>
+            <input type="email" name="email" id="email" required placeholder="Your email address">
+            <button class="button">Get Stared -></button>
+            <p>We won’t send any types of spam, Guranteed</p>
         </section>
         <section class="seccion7">
 
