--- a/index.html
+++ b/index.html
@@ -89,7 +89,23 @@
             <p>We won’t send any types of spam, Guranteed</p>
         </section>
         <section class="seccion7">
-
+            <nav class="nav-footer">
+                <ul>
+                    <li>Home</li>
+                    <li>Generic</li>
+                    <li>Elements</li>
+                </ul>
+            </nav>
+            <div class="flex-container-logos">
+                <ul>
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-facebook-f"></i></li>
+                    <li><i class="fab fa-snapchat-ghost"></i></li>
+                    <li><i class="fab fa-instagram"></i></li>
+                    <li><i class="fab fa-pinterest-p"></i></li>
+                </ul>
+            </div>
+            <p>Copyright ©2018 All rights reserved | This template is made with  by Colorlib</p>
         </section>
     </div>
 </body>
