--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
 
 <body>
     <div class="container">
-        <div class="nav-desplegable">
-            <button class="nav-desplegable-button"> Pemodule </button>
-            <div class="nav-desplegable-content">
+        <section class="seccion0">
+            <div class="nav-desplegable">
+                <button class="nav-desplegable-button"> Pemodule </button>
+                <div class="nav-desplegable-content">
+                    <ul>
+                        <li>Parte1</li>
+                        <li>parte2</li>
+                        <li>parte3</li>
+                        <li>parte4</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="flex-container-nav">
                 <ul>
-                    <li>Parte1</li>
-                    <li>parte2</li>
-                    <li>parte3</li>
-                    <li>parte4</li>
+                    <li><i class="fas fa-cloud-download-alt"></i></li>
+                    <li><i class="fas fa-times"></i></li>
+                    <li><i class="fab fa-twitter"></i></li>
+                    <li><i class="fab fa-facebook-square"></i></li>
                 </ul>
             </div>
-        </div>
-        <div class="nav">
-            <ul>
-                <li><i class="fas fa-cloud-download-alt"></i></li>
-                <li><i class="fas fa-times"></i></li>
-                <li><i class="fab fa-twitter"></i></li>
-                <li><i class="fab fa-facebook-square"></i></li>
-            </ul>
-        </div>
+        </section>
         <section class="seccion1">
             <div class="logo">
                 <img src="logo.jpg" alt="logo">
@@ -46,9 +48,11 @@
                     </ul>
                 </div>
             </div>
-            <h1>Conoce mas sobre</h1>
-            <h1>ESTHER LARA</h1>
-            <button class="button">Get Stared -></button>
+            <div class="contenido">
+                <h1>Conoce mas sobre</h1>
+                <h1>ESTHER LARA</h1>
+                <button class="button">Get Stared -></button>
+            </div>
         </section>
         <section class="seccion2">
             <div class="media">
@@ -105,7 +109,7 @@
                     <li><i class="fab fa-pinterest-p"></i></li>
                 </ul>
             </div>
-            <p>Copyright ©2018 All rights reserved | This template is made with  by Colorlib</p>
+            <p>Copyright ©2018 All rights reserved | This template is made with by Colorlib</p>
         </section>
     </div>
 </body>
