--- a/index.html
+++ b/index.html
@@ -13,50 +13,31 @@
 
 <body>
     <div class="container">
-        <section class="seccion0">
-            <div class="nav-desplegable">
-                <button class="nav-desplegable-button"> Pemodule </button>
-                <div class="nav-desplegable-content">
-                    <ul>
-                        <li>Parte1</li>
-                        <li>parte2</li>
-                        <li>parte3</li>
-                        <li>parte4</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="flex-container-nav">
-                <ul>
-                    <li><i class="fas fa-cloud-download-alt"></i></li>
-                    <li><i class="fas fa-times"></i></li>
-                    <li><i class="fab fa-twitter"></i></li>
-                    <li><i class="fab fa-facebook-square"></i></li>
-                </ul>
-            </div>
-        </section>
         <section class="seccion1">
-            <div class="logo">
-                <img src="logo.jpg" alt="logo">
-            </div>
-            <div class="submenu">
-                <button class="submenu-button"> <i class="fas fa-bars"></i> </button>
-                <div class="submenu-content">
-                    <ul>
-                        <li>home</li>
-                        <li>generic</li>
-                        <li>elements</li>
-                    </ul>
+            <div class="alinear">
+                <div class="logo">
+                    <img src="logo.jpg" alt="logo" width="80%" height="30%">
                 </div>
-            </div>
-            <div class="contenido">
-                <h1>Conoce mas sobre</h1>
-                <h1>ESTHER LARA</h1>
-                <button class="button">Get Stared -></button>
+                <div class="submenu">
+                    <button class="submenu-button"> <i class="fas fa-bars"></i> </button>
+                    <div class="submenu-content">
+                        <ul>
+                            <li>home</li>
+                            <li>generic</li>
+                            <li>elements</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="contenido">
+                    <h1>Siente el sabor de</h1>
+                    <h1><span style="color: red;"><b>Coca Cola</b></span></h1>
+                    <button class="button">Get Stared -></button>
+                </div>
             </div>
         </section>
         <section class="seccion2">
             <div class="media">
-                <img src="pic1.jpg" alt="pic1" width="500px" height="400px">
+                <img src="pic5.jpg" alt="pic5" width="500px" height="300px">
             </div>
             <div class="body">
                 <h1>Razones para <span> Conocerme </span></h1>
@@ -67,10 +48,12 @@
             </div>
         </section>
         <section class="seccion3 paralax-background">
-            <h1>Razones para <span> Conocerme </span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis aut nobis, sunt sint quisquam aperiam
-                incidunt amet maiores non dolor earum vel. Ab suscipit dicta quam rerum possimus vitae quia?</p>
-            <button class="button">Get Stared -></button>
+            <div class="fantasma">
+            </div>
+            <div class="topic">
+                <p>Lo mejor de poder tomarte una Coca Cola es poder compartirla</p>
+                <button class="button">Get Stared -></button>
+            </div>
         </section>
         <section class="seccion4">
             <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
