cambiando imagenes seccion4 y poniendo el texto

--- a/index.html
+++ b/index.html
@@ -56,10 +56,25 @@
             </div>
         </section>
         <section class="seccion4">
-            <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
-            <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
-            <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
-            <div><img src="pic4.jpg" alt="pic4" width="550px" height="500px"></div>
+            <div class="animacion">
+                <p>Whoever you are, whatever you do, wherever you may be, when you think of refreshment, think of ice
+                    cold Coca-Cola.</p>
+                <img src="pic4.jpg" alt="pic4" width="550px" height="500px">
+            </div>
+            <div class="animacion">
+                <p>Have a Coke and a smile</p>
+                <img src="pic6.jpg" alt="pic6" width="550px" height="500px">
+            </div>
+            <div class="animacion">
+                <p>Los que estan suficientemente locos para pensar que pueden cambiar el mundo son los que lo hacen.</p>
+                <img src="pic7.jpg" alt="pic7" width="550px" height="500px">
+            </div>
+            <div class="animacion">
+                <p>Crea algo por lo que alguien pagaría y regálaselo, así construyes confianza, sorprendes al usuario y
+                    además querrá compartir que ha conseguido algo gratis, sin que una marca haya intentado venderle
+                    algo.</p>
+                <img src="pic8.jpg" alt="pic8" width="550px" height="500px">
+            </div>
         </section>
         <section class="seccion5">
             <h1>Send Us Message</h1>
