--- a/index.html
+++ b/index.html
@@ -77,12 +77,18 @@
             </div>
         </section>
         <section class="seccion5">
-            <h1>Send Us Message</h1>
-            <p>Most people who work in an office environment, buy computer products.</p>
-            <input type="text" name="name" id="name" required placeholder="Enter your name">
-            <input type="email" name="email" id="email" required placeholder="Enter email address"><br>
-            <textarea name="wish" id="wish" cols="30" rows="10" placeholder="Messege"></textarea><br>
-            <button class="button">Send Message -></button>
+            <div class="texto">
+                <h1>Send Us <b>Message</b></h1>
+                <p>Most people who work in an office environment, buy computer products.</p>
+            </div>
+            <div class="cajitas">
+                <input type="text" name="name" id="name" required placeholder="Enter your name">
+                <input type="email" name="email" id="email" required placeholder="Enter email address"><br><br>
+                <textarea name="wish" id="wish" cols="30" rows="10" placeholder="Message" style="margin: 0px; width: 994px; height: 141px;"></textarea><br><br>
+            </div>
+            <div class="btn">
+                <button class="button">Send Message -></button>
+            </div>
         </section>
         <section class="seccion6">
             <h1>Subscribe for our Newsletter</h1>
