--- a/index.html
+++ b/index.html
@@ -91,12 +91,15 @@
             </div>
         </section>
         <section class="seccion6">
-            <h1>Subscribe for our Newsletter</h1>
-            <input type="email" name="email" id="email" required placeholder="Your email address">
-            <button class="button">Get Stared -></button>
-            <p>We won’t send any types of spam, Guranteed</p>
+            <div class="subs">
+                <h1>Subscribe for our<span style="color:black;"> Newsletter</span></h1>
+                    <input type="email" name="email" id="email" required placeholder="Your email address">
+                <button class="button">Get Stared -></button>
+                <p>We won’t send any types of spam, Guranteed</p>
+            </div>
         </section>
         <section class="seccion7">
+            <div class="pie">
             <nav class="nav-footer">
                 <ul>
                     <li>Home</li>
@@ -114,6 +117,7 @@
                 </ul>
             </div>
             <p>Copyright ©2018 All rights reserved | This template is made with by Colorlib</p>
+        </div>
         </section>
     </div>
 </body>
