--- a/index.html
+++ b/index.html
@@ -14,24 +14,26 @@
 <body>
     <div class="container">
         <section class="seccion1">
-            <div class="alinear">
-                <div class="logo">
-                    <img src="logo.jpg" alt="logo" width="80%" height="30%">
-                </div>
-                <div class="submenu">
-                    <button class="submenu-button"> <i class="fas fa-bars"></i> </button>
-                    <div class="submenu-content">
-                        <ul>
-                            <li>home</li>
-                            <li>generic</li>
-                            <li>elements</li>
-                        </ul>
+            <div class="todo-seccion1">
+                <div class="alinear">
+                    <div class="logo">
+                        <img src="logo.jpg" alt="logo" width="80%" height="30%">
                     </div>
-                </div>
-                <div class="contenido">
-                    <h1>Siente el sabor de</h1>
-                    <h1><span style="color: red;"><b>Coca Cola</b></span></h1>
-                    <button class="button">Get Stared -></button>
+                    <div class="submenu">
+                        <button class="submenu-button"> <i class="fas fa-bars"></i> </button>
+                        <div class="submenu-content">
+                            <ul>
+                                <li>home</li>
+                                <li>generic</li>
+                                <li>elements</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="contenido">
+                        <h1>Siente el sabor de</h1>
+                        <h1><span style="color: red;"><b>Coca Cola</b></span></h1>
+                        <button class="button">Get Stared -></button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -40,10 +42,12 @@
                 <img src="pic5.jpg" alt="pic5" width="500px" height="300px">
             </div>
             <div class="body">
-                <h1>Razones para <span> Conocerme </span></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis aut nobis, sunt sint quisquam
-                    aperiam
-                    incidunt amet maiores non dolor earum vel. Ab suscipit dicta quam rerum possimus vitae quia?</p>
+                <h1>Razones para <span> disfrutar una coca cola </span></h1>
+                <p>Coca-Cola te trae el vaso Edición Limitada de la Copa Mundial de la FIFA. ¡Canjea el tuyo!
+                    Coca-Cola te trae el vaso Edición Limitada de la Copa Mundial de la FIFA. ¡Canjea el tuyo!
+                    Coca-Cola te trae el vaso Edición Limitada de la Copa Mundial de la FIFA. ¡Canjea el tuyo!
+                    Coca-Cola te trae el vaso Edición Limitada de la Copa Mundial de la FIFA. ¡Canjea el tuyo!
+                </p>
                 <button class="button">Get Stared -></button>
             </div>
         </section>
@@ -59,65 +63,64 @@
             <div class="animacion">
                 <p>Whoever you are, whatever you do, wherever you may be, when you think of refreshment, think of ice
                     cold Coca-Cola.</p>
-                <img src="pic4.jpg" alt="pic4" width="550px" height="500px">
             </div>
-            <div class="animacion">
+            <div class="animacion1">
                 <p>Have a Coke and a smile</p>
-                <img src="pic6.jpg" alt="pic6" width="550px" height="500px">
             </div>
-            <div class="animacion">
+            <div class="animacion2">
                 <p>Los que estan suficientemente locos para pensar que pueden cambiar el mundo son los que lo hacen.</p>
-                <img src="pic7.jpg" alt="pic7" width="550px" height="500px">
             </div>
-            <div class="animacion">
+            <div class="animacion3">
                 <p>Crea algo por lo que alguien pagaría y regálaselo, así construyes confianza, sorprendes al usuario y
                     además querrá compartir que ha conseguido algo gratis, sin que una marca haya intentado venderle
                     algo.</p>
-                <img src="pic8.jpg" alt="pic8" width="550px" height="500px">
             </div>
         </section>
         <section class="seccion5">
-            <div class="texto">
-                <h1>Send Us <b>Message</b></h1>
-                <p>Most people who work in an office environment, buy computer products.</p>
-            </div>
-            <div class="cajitas">
-                <input type="text" name="name" id="name" required placeholder="Enter your name">
-                <input type="email" name="email" id="email" required placeholder="Enter email address"><br><br>
-                <textarea name="wish" id="wish" cols="30" rows="10" placeholder="Message" style="margin: 0px; width: 994px; height: 141px;"></textarea><br><br>
-            </div>
-            <div class="btn">
-                <button class="button">Send Message -></button>
+            <div class="todo-seccion5">
+                <div class="texto">
+                    <h1>Send Us <b>Message</b></h1>
+                    <p>Most people who work in an office environment, buy computer products.</p>
+                </div>
+                <div class="cajitas">
+                    <input type="text" name="name" id="name" required placeholder="Enter your name">
+                    <input type="email" name="email" id="email" required placeholder="Enter email address"><br><br>
+                    <textarea name="wish" id="wish" cols="30" rows="10" placeholder="Message" style="margin: 0px; width: 994px; height: 141px;"></textarea><br><br>
+                </div>
+                <div class="btn">
+                    <button class="button">Send Message -></button>
+                </div>
             </div>
         </section>
         <section class="seccion6">
             <div class="subs">
                 <h1>Subscribe for our<span style="color:black;"> Newsletter</span></h1>
-                    <input type="email" name="email" id="email" required placeholder="Your email address">
+                <input type="email" name="email" id="email" required placeholder="Your email address">
                 <button class="button">Get Stared -></button>
                 <p>We won’t send any types of spam, Guranteed</p>
             </div>
         </section>
         <section class="seccion7">
             <div class="pie">
-            <nav class="nav-footer">
-                <ul>
-                    <li>Home</li>
-                    <li>Generic</li>
-                    <li>Elements</li>
-                </ul>
-            </nav>
-            <div class="flex-container-logos">
-                <ul>
-                    <li><i class="fab fa-twitter"></i></li>
-                    <li><i class="fab fa-facebook-f"></i></li>
-                    <li><i class="fab fa-snapchat-ghost"></i></li>
-                    <li><i class="fab fa-instagram"></i></li>
-                    <li><i class="fab fa-pinterest-p"></i></li>
-                </ul>
+                <nav class="nav-footer">
+                    <ul>
+                        <li>Home</li>
+                        <li>Generic</li>
+                        <li>Elements</li>
+                    </ul>
+                </nav>
+                <div class="flex-container-logos" style="display:inline-block;">
+                    <ul>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-snapchat-ghost"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                    </ul>
+                </div>
+                <p>Copyright ©2018 All rights reserved | This template is made with <i class="far fa-heart" style="color:red;"></i>
+                    by <b style="color:red;">Esther Lara</b></p>
             </div>
-            <p>Copyright ©2018 All rights reserved | This template is made with by Colorlib</p>
-        </div>
         </section>
     </div>
 </body>
