--- a/index.html
+++ b/index.html
@@ -61,19 +61,31 @@
         </section>
         <section class="seccion4">
             <div class="animacion">
-                <p>Whoever you are, whatever you do, wherever you may be, when you think of refreshment, think of ice
-                    cold Coca-Cola.</p>
+                <div class="caja">
+                    <p>Whoever you are, whatever you do, wherever you may be, when you think of refreshment, think of
+                        ice
+                        cold Coca-Cola.</p>
+                </div>
             </div>
             <div class="animacion1">
-                <p>Have a Coke and a smile</p>
+                <div class="caja1">
+                    <p>Have a Coke and a smile</p>
+                </div>
             </div>
             <div class="animacion2">
-                <p>Los que estan suficientemente locos para pensar que pueden cambiar el mundo son los que lo hacen.</p>
+                <div class="caja2">
+                    <p>Los que estan suficientemente locos para pensar que pueden cambiar el mundo son los que lo
+                        hacen.</p>
+                </div>
             </div>
             <div class="animacion3">
-                <p>Crea algo por lo que alguien pagaría y regálaselo, así construyes confianza, sorprendes al usuario y
-                    además querrá compartir que ha conseguido algo gratis, sin que una marca haya intentado venderle
-                    algo.</p>
+                <div class="caja3">
+                    <p>Crea algo por lo que alguien pagaría y regálaselo, así construyes confianza, sorprendes al
+                        usuario y
+                        además querrá compartir que ha conseguido algo gratis, sin que una marca haya intentado
+                        venderle
+                        algo.</p>
+                </div>
             </div>
         </section>
         <section class="seccion5">
