--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                     <div class="contenido">
-                        <h1>Siente el sabor de</h1>
+                        <h1>feel the taste of</h1>
                         <h1><span style="color: red;"><b>Coca Cola</b></span></h1>
                         <button class="button">Get Stared -></button>
                     </div>
@@ -42,11 +42,11 @@
                 <img src="pic5.jpg" alt="pic5" width="500px" height="300px">
             </div>
             <div class="body">
-                <h1>Razones para <span> disfrutar una coca cola </span></h1>
-                <p>Coca-Cola te trae el vaso Edición Limitada de la Copa Mundial de la FIFA. ¡Canjea el tuyo!
-                    Coca-Cola te trae el vaso Edición Limitada de la Copa Mundial de la FIFA. ¡Canjea el tuyo!
-                    Coca-Cola te trae el vaso Edición Limitada de la Copa Mundial de la FIFA. ¡Canjea el tuyo!
-                    Coca-Cola te trae el vaso Edición Limitada de la Copa Mundial de la FIFA. ¡Canjea el tuyo!
+                <h1>Reasons to <span> enjoy a Coca Cola </span></h1>
+                <p>Coca-Cola brings you the Limited Edition glass of the FIFA World Cup. Trade yours!
+                    Coca-Cola brings you the Limited Edition glass of the FIFA World Cup. Trade yours!
+                    Coca-Cola brings you the Limited Edition glass of the FIFA World Cup. Trade yours!
+                    Coca-Cola brings you the Limited Edition glass of the FIFA World Cup. Trade yours!
                 </p>
                 <button class="button">Get Stared -></button>
             </div>
@@ -55,7 +55,7 @@
             <div class="fantasma">
             </div>
             <div class="topic">
-                <p>Lo mejor de poder tomarte una Coca Cola es poder compartirla</p>
+                <p>The best thing about being able to drink a Coca Cola is to be able to share it</p>
                 <button class="button">Get Stared -></button>
             </div>
         </section>
@@ -74,17 +74,15 @@
             </div>
             <div class="animacion2">
                 <div class="caja2">
-                    <p>Los que estan suficientemente locos para pensar que pueden cambiar el mundo son los que lo
-                        hacen.</p>
+                    <p>Those who are crazy enough to think that they can change the world are the ones who
+                        make.</p>
                 </div>
             </div>
             <div class="animacion3">
                 <div class="caja3">
-                    <p>Crea algo por lo que alguien pagaría y regálaselo, así construyes confianza, sorprendes al
-                        usuario y
-                        además querrá compartir que ha conseguido algo gratis, sin que una marca haya intentado
-                        venderle
-                        algo.</p>
+                    <p>Create something for which someone would pay and give it back, so build confidence, surprise
+                        the user and also want to share that you have achieved something for free, without a brand has
+                        tried to sell something.</p>
                 </div>
             </div>
         </section>
