--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
                     <div class="logo">
                         <img src="logo.jpg" alt="logo" width="80%" height="30%">
                     </div>
-                    <div class="submenu">
-                        <button class="submenu-button"> <i class="fas fa-bars"></i> </button>
-                        <div class="submenu-content">
-                            <ul>
-                                <li>home</li>
-                                <li>generic</li>
-                                <li>elements</li>
-                            </ul>
-                        </div>
-                    </div>
+                    <nav class="menu">
+                        <ul>
+                            <li><a href="#">home</a></li>
+                            <li><a href="#">generic</a></li>
+                            <li><a href="#">elements</a></li>
+                            <li><i class="fas fa-times" style="font-size: 1.2em; margin-left: 1.5em; cursor: pointer;"></i></li>
+                        </ul>
+                    </nav>
                     <div class="contenido">
                         <h1>feel the taste of</h1>
                         <h1><span style="color: red;"><b>Coca Cola</b></span></h1>
