--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="cajitas">
                     <input type="text" name="name" id="name" required placeholder="Enter your name">
                     <input type="email" name="email" id="email" required placeholder="Enter email address"><br><br>
-                    <textarea name="wish" id="wish" cols="30" rows="10" placeholder="Message" style="margin: 0px; width: 994px; height: 141px;"></textarea><br><br>
+                    <textarea name="wish" id="wish" cols="30" rows="10" placeholder="Message" style="margin: 0px; height: 141px;"></textarea><br><br>
                 </div>
                 <div class="btn">
                     <button class="button">Send Message -></button>
